<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.CreateProduct">
    <!--Toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/app_color_primary"
        android:elevation="10sp"
        android:minHeight="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:id="@+id/llBackButton"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/back_image"></ImageView>
            </LinearLayout>

            <TextView
                android:id="@+id/tvToolbarname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/llBackButton"
                android:paddingLeft="10sp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"></TextView>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:padding="15dp"
        tools:ignore="UnknownId">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="Add a new Product"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Enter Product Name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etproductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Enter Discription"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etproductDiscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Enter Regular Price"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etRegularPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:inputType="number"
            android:maxLength="7"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Enter Sale Price"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etSalePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:inputType="number"
            android:maxLength="7"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor" />


        <Spinner
            android:id="@+id/spinnerColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:entries="@array/colors" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llchooseImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_round"
                android:padding="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Select Product Image"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/tvImagePath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10sp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:textColor="@color/black"></TextView>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_store_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etStorename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor" />


        <LinearLayout
            android:id="@+id/llAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/bg_button_round"
            android:padding="15sp">

            <TextView
                android:id="@+id/tvAddProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_product"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>